can now display connections in table
